if MAKE_SWIG_PYTHON
   OPT_SUBDIR = python
endif

SUBDIRS = $(OPT_SUBDIR)

EXTRA_DIST = libdar.i

#EXTRA_DIST = archive.i dar_types.i infinint.i libdar.i mask.i path.i statistics.i tools.i user_interaction.i


#install-exec-local:
#	mkdir -p $(DESTDIR)$(libdir)/dar

#uninstall-local:
#	-rmdir $(DESTDIR)$(libdir)/dar
